--- a/subv.html
+++ b/subv.html
@@ -2,16 +2,17 @@
 <html lang="zh-CN">
 <head>
 	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="stylesheet" type="text/css" href="assets/third/css/bootstrap.css" />
 	<link rel="stylesheet" type="text/css" href="assets/third/css/bootstrap-responsive.css" />
 	<link rel="stylesheet" type="text/css" href="assets/third/css/font-awesome.css" />
 	<link rel="stylesheet" type="text/css" href="assets/css/subv.css" />
 	<script type="text/javascript" src="assets/third/js/jquery.js"></script>
 	<script type="text/javascript" src="assets/third/js/amplify.store.js"></script>
-	<script type="text/javascript" src="assets/third/js/doT.js"></script>	
+	<script type="text/javascript" src="assets/third/js/doT.js"></script>
 	<script type="text/javascript" src="assets/third/js/bootstrap.js"></script>
-	<script type="text/javascript" src="assets/js/subv.js"></script>	
-	<script type="text/javascript" src="assets/js/subv.api.v2ex.js"></script>	
+	<script type="text/javascript" src="assets/js/subv.js"></script>
+	<script type="text/javascript" src="assets/js/subv.api.v2ex.js"></script>
 	<title>Subv</title>
 </head>
 <body>
@@ -48,7 +49,7 @@
 		<div id="content">
 			<div id="items">
 				<div id="latest"></div>
-		
+
 				<div class="btn-toolbar footer-tb">
 					<div class="footer-tb-reload">
 						<div class="btn-group">
@@ -79,7 +80,7 @@
 					</button>
 				</div>
 				<div id="read"></div>
-		
+
 				<div class="btn-toolbar">
 					<button class="btn full-width" id="banned-items-toggle">
 						<span class="caret"></span>
