minor style changes, bug fixes[1], improvements[2]
[1] If width range bar not avail 1st time, use default.
[2] scroll to top after refresh
[3] uses xdomainajax.js.
We are moving into the extension-less mode.

--- a/subv.html
+++ b/subv.html
@@ -6,11 +6,13 @@
 	<link rel="stylesheet" type="text/css" href="assets/third/css/bootstrap.css" />
 	<link rel="stylesheet" type="text/css" href="assets/third/css/bootstrap-responsive.css" />
 	<link rel="stylesheet" type="text/css" href="assets/third/css/font-awesome.css" />
-	<link rel="stylesheet" type="text/css" href="assets/css/subv.css" />
 	<script type="text/javascript" src="assets/third/js/jquery.js"></script>
+	<script type="text/javascript" src="assets/third/js/jquery.xdomainajax.js"></script>
 	<script type="text/javascript" src="assets/third/js/amplify.store.js"></script>
 	<script type="text/javascript" src="assets/third/js/doT.js"></script>
 	<script type="text/javascript" src="assets/third/js/bootstrap.js"></script>
+
+	<link rel="stylesheet" type="text/css" href="assets/css/subv.css" />
 	<script type="text/javascript" src="assets/js/subv.js"></script>
 	<script type="text/javascript" src="assets/js/subv.api.v2ex.js"></script>
 	<title>Subv</title>
