--- a/subv.html
+++ b/subv.html
@@ -160,9 +160,9 @@
 	<div class="comment-item" id="comment-{{=it.id}}">
 		<div class="comment-main">
 			<div class="comment-meta">
-				<span class="author"><a href="{{=it.user.path}}">{{=it.user.name}}</a></span>
+				<span class="no">{{=it.no}}<sup>#</sup></span>
+				&middot; <span class="author"><a href="{{=it.user.path}}">{{=it.user.name}}</a></span>
 				&middot; <span class="time" x-title="{{=it.time_iso}}">{{=it.time_ago}}</span>
-				&middot; <span class="no">#{{=it.no}}</span>
 			</div>
 			<div class="comment-content">
 				{{=it.content_html}}
