--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="zh-CN" manifest="subv.appcache">
 <head>
 	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta name="apple-mobile-web-app-capable" content="yes" />
+	<meta id="viewport-width" name="viewport" content="initial-scale=1.0, width=320" />
+	<meta id="viewport-fix" name="viewport" content="" />
+	<!--<meta name="viewport" content="initial-scale=1.0" />-->
 	<link rel="stylesheet" type="text/css" href="assets/third/css/bootstrap.css" />
 	<link rel="stylesheet" type="text/css" href="assets/third/css/bootstrap-responsive.css" />
 	<link rel="stylesheet" type="text/css" href="assets/third/css/font-awesome.css" />
@@ -44,6 +47,18 @@
 				<button class="btn" id="btn-set-mode-inline">inline</button>
 				<button class="btn" id="btn-set-mode-outline">outline</button>
 				<button class="btn" id="btn-set-mode-stacked">stacked</button>
+			</div>
+			<div class="btn-group">
+				<select id="viewport-width-selector">
+					<option value="initial-scale=1.0, width=device-width" selected="selected">device-width</option>
+					<option value="initial-scale=1.33, width=240">240</option>
+					<option value="initial-scale=1.14, width=280">280</option>
+					<option value="initial-scale=1.0, width=320">320</option>
+					<option value="initial-scale=0.88, width=360">360</option>
+					<option value="initial-scale=6.0, width=400">400</option>
+					<option value="initial-scale=7.0, width=440">440</option>
+					<option value="initial-scale=8.0, width=480">480</option>
+				</select>
 			</div>
 		</div>
 		<div class="btn-toolbar width-tb">
