--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="apple-mobile-web-app-capable" content="yes" />
 	<meta id="viewport-width" name="viewport" content="initial-scale=1.0, width=320" />
 	<meta id="viewport-fix" name="viewport" content="" />
+	<link rel="apple-touch-icon" href="assets/image/touch.png" />
 	<!--<meta name="viewport" content="initial-scale=1.0" />-->
 	<link rel="stylesheet" type="text/css" href="assets/third/css/bootstrap.css" />
 	<link rel="stylesheet" type="text/css" href="assets/third/css/bootstrap-responsive.css" />
