new favicon and touch icon

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 	<meta name="apple-mobile-web-app-capable" content="yes" />
 	<meta id="viewport-width" name="viewport" content="initial-scale=1.0, width=320" />
 	<meta id="viewport-fix" name="viewport" content="" />
-	<link rel="apple-touch-icon" href="assets/image/touch.png" />
+	<link rel="apple-touch-icon" href="assets/image/more_human_mind.png" />
+	<link rel="icon" type="image/png" href="assets/image/16x.png" />
 	<!--<meta name="viewport" content="initial-scale=1.0" />-->
 	<link rel="stylesheet" type="text/css" href="assets/third/css/bootstrap.css" />
 	<link rel="stylesheet" type="text/css" href="assets/third/css/bootstrap-responsive.css" />
