added manually update appcache button

--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
 		</div>
 
 		<div id="prefs" class="">
+			<div class="btn-toolbar">
+				<div class="btn-group">
+					<button class="btn" id="btn-update"><i class="icon-refresh"></i> update app now</button>
+				</div>
+			</div>
 			<label>Comments expand:</label>
 			<div class="btn-toolbar">
 				<div class="btn-group">
