tmp fixed click logo to reload

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	<div id="wrapper">
 		<div id="nav" class="btn-toolbar">
 			<div class="btn-group">
-				<a class="btn btn-large" href="http://www.v2ex.com">V2EX</a>
+				<a id="logo" class="btn btn-large" href="http://www.v2ex.com">V2EX</a>
 				<button class="btn btn-large dropdown-toggle" data-toggle="dropdown">
 					<i class="icon-chevron-down"></i>
 				</button>
