minor style fix

--- a/index.html
+++ b/index.html
@@ -24,10 +24,7 @@
 	<script>
 		if (!amplify.store("subv.settings.noTrack") && location.hostname === "mgao.org") {
 			subv.log("GA enabled");
-			var _gaq = _gaq || [];
-			_gaq.push(['_setAccount', 'UA-26964051-1']);
-			_gaq.push(['_trackPageview']);
-	
+			var _gaq = [ ['_setAccount', 'UA-26964051-1'], ['_trackPageview'] ];
 			(function() {
 			  var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
 			  ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
