minor style change, avoid adding dup item

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 					</div>
 					<div class="footer-tb-more">
 						<div class="btn-group full-width">
-							<button class="btn full-width" id="more">more</button>
+							<button class="btn btn-primary full-width" id="more">more</button>
 						</div>
 					</div>
 				</div>
@@ -205,8 +205,9 @@
 			</form>
 		</div>
 		-->
-		<div class="goto-item" id="goto-item-{{=it.id}}">
-			<button class="btn"><i class="icon-chevron-left"></i> BACK</button>
+		<div>
+			<button class="btn btn-success goto-item" id="goto-item-{{=it.id}}"><i class="icon-arrow-left"></i> Scroll back to the topic</button>
+			<button class="btn goto-top pull-right">TOP<sup><i class="icon-arrow-up"></i></sup></button>
 		</div>
 	</div>
 
