--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 				</div>
 			</div>
 			-->
-			<label>Comments expand:</label>
+			<label>Item expand (refresh needed after changed):</label>
 			<div class="btn-toolbar">
 				<div class="btn-group">
 					<button class="btn js-btn-set-mode" id="btn-set-mode-inline">inline</button>
