--- a/index.html
+++ b/index.html
@@ -205,9 +205,13 @@
 			</form>
 		</div>
 		-->
+		<!--
 		<div>
 			<button class="btn btn-success goto-item" id="goto-item-{{=it.id}}"><i class="icon-arrow-left"></i> Scroll back to the topic</button>
 			<button class="btn goto-top pull-right">TOP<sup><i class="icon-arrow-up"></i></sup></button>
+		</div>-->
+		<div class="end-of-item">
+			<a href="#" title="Toolbox, WIP">◆</a>
 		</div>
 	</div>
 
