hot fix for IE and improve TODO, GA fix

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta id="viewport-width" name="viewport" content="initial-scale=1.0, width=320" />
 	<meta id="viewport-fix" name="viewport" content="" />
 	<!--<meta name="viewport" content="initial-scale=1.0" />-->
+	<title>Subv</title>
 	<link rel="apple-touch-icon" href="assets/image/more_human_mind.png" />
 	<link rel="icon" type="image/png" href="assets/image/16x.png" />
 
@@ -22,7 +23,7 @@
 	<script type="text/javascript" src="assets/js/subv.js"></script>
 	<script type="text/javascript" src="assets/js/subv.api.v2ex.js"></script>
 	<script>
-		if (!amplify.store("subv.settings.noTrack") && location.hostname === "mgao.org") {
+		if (!amplify.store("subv.settings.noTrack") && location.hostname === "dmesg.es") {
 			subv.log("GA enabled");
 			var _gaq = [ ['_setAccount', 'UA-26964051-1'], ['_trackPageview'] ];
 			(function() {
@@ -34,7 +35,6 @@
 			subv.log("GA disabled");
 		}
 	</script>
-	<title>Subv</title>
 </head>
 <body>
 	<div id="wrapper">
