Previous pages of a topic now loading...

--- a/index.html
+++ b/index.html
@@ -185,16 +185,16 @@
 
 	<div class="item-comments item-row">
 		<div class="op"></div>
-		<div class="page-1"><button class="btn btn-load-page js-load-page">load page 1</button></div>
-		<div class="page-2"><button class="btn btn-load-page js-load-page">load page 2</button></div>
-		<div class="page-3"><button class="btn btn-load-page js-load-page">load page 3</button></div>
-		<div class="page-4"><button class="btn btn-load-page js-load-page">load page 4</button></div>
-		<div class="page-5"><button class="btn btn-load-page js-load-page">load page 5</button></div>
-		<div class="page-6"><button class="btn btn-load-page js-load-page">load page 6</button></div>
-		<div class="page-7"><button class="btn btn-load-page js-load-page">load page 7</button></div>
-		<div class="page-8"><button class="btn btn-load-page js-load-page">load page 8</button></div>
-		<div class="page-9"><button class="btn btn-load-page js-load-page">load page 9</button></div>
-		<div class="page-10"><button class="btn btn-load-page js-load-page">load page 10</button></div>
+		<div class="page-1"><button id="load-{{=it.id}}-1" class="btn js-load-page">Load page 1</button></div>
+		<div class="page-2"><button id="load-{{=it.id}}-2" class="btn js-load-page">Load page 2</button></div>
+		<div class="page-3"><button id="load-{{=it.id}}-3" class="btn js-load-page">Load page 3</button></div>
+		<div class="page-4"><button id="load-{{=it.id}}-4" class="btn js-load-page">Load page 4</button></div>
+		<div class="page-5"><button id="load-{{=it.id}}-5" class="btn js-load-page">Load page 5</button></div>
+		<div class="page-6"><button id="load-{{=it.id}}-6" class="btn js-load-page">Load page 6</button></div>
+		<div class="page-7"><button id="load-{{=it.id}}-7" class="btn js-load-page">Load page 7</button></div>
+		<div class="page-8"><button id="load-{{=it.id}}-8" class="btn js-load-page">Load page 8</button></div>
+		<div class="page-9"><button id="load-{{=it.id}}-9" class="btn js-load-page">Load page 9</button></div>
+		<div class="page-10"><button id="load-{{=it.id}}-10" class="btn js-load-page">Load page 10</button></div>
 		<!-- comment maybe gone forever :(
 		<div>
 			<button class="btn btn-show-comment-box js-show-comment-box">add comment</button>
